--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,11 @@
-<ion-header>
+<ion-header class="listing-header">
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+      Home
+    </ion-title>
   </ion-navbar>
 </ion-header>
 
