change main pages

--- a/src/pages/all-events/all-events.html
+++ b/src/pages/all-events/all-events.html
@@ -1,10 +1,16 @@
 <ion-header>
+
   <ion-navbar>
+    <button ion-button [menuToggle]="activeMenu">
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>
-      About
+      Explore
     </ion-title>
   </ion-navbar>
+
 </ion-header>
+
 
 <ion-content padding>
 
