--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="My Event" tabIcon="restaurant"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Explore" tabIcon="list"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="All Users" tabIcon="people"></ion-tab>
 </ion-tabs>
