--- a/src/pages/all-events/all-events.html
+++ b/src/pages/all-events/all-events.html
@@ -13,5 +13,118 @@
 
 
 <ion-content padding>
+  <ion-card>
 
+    <img src="assets/imgs/nin-live.png" />
+
+    <ion-card-content>
+      <ion-card-title>
+        Nine Inch Nails Live
+      </ion-card-title>
+      <p>
+        The most popular industrial group ever, and largely responsible for bringing the music to a mass audience.
+      </p>
+    </ion-card-content>
+
+    <ion-row no-padding>
+      <ion-col>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='happy'></ion-icon>
+          Join
+        </button>
+      </ion-col>
+      <ion-col text-center>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='star-outline'></ion-icon>
+          Bookmark
+        </button>
+      </ion-col>
+      <ion-col text-right>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='share-alt'></ion-icon>
+          Share
+        </button>
+      </ion-col>
+    </ion-row>
+
+  </ion-card>
+
+  <ion-card>
+
+    <div>
+      <img src="assets/imgs/badu-live.png" />
+    </div>
+
+    <ion-card-content>
+      <ion-card-title>
+        Erykah Badu
+      </ion-card-title>
+      <p>
+        American singer-songwriter, record producer, activist, and actress, Badu's style is a prime example of
+        neo-soul.
+      </p>
+    </ion-card-content>
+
+    <ion-row no-padding>
+      <ion-col>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='happy'></ion-icon>
+          Join
+        </button>
+      </ion-col>
+      <ion-col text-center>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='star'></ion-icon>
+          Bookmark
+        </button>
+      </ion-col>
+      <ion-col text-right>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='share-alt'></ion-icon>
+          Share
+        </button>
+      </ion-col>
+    </ion-row>
+
+  </ion-card>
+
+
+  <ion-card>
+
+    <div>
+      <img src="assets/imgs/queen-live.png" />
+    </div>
+
+    <ion-card-content>
+      <ion-card-title>
+        Queen
+      </ion-card-title>
+      <p>
+        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the
+        world.
+      </p>
+    </ion-card-content>
+
+    <ion-row no-padding>
+      <ion-col>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='happy'></ion-icon>
+          Join
+        </button>
+      </ion-col>
+      <ion-col text-center>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='star-outline'></ion-icon>
+          Bookmark
+        </button>
+      </ion-col>
+      <ion-col text-right>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='share-alt'></ion-icon>
+          Share
+        </button>
+      </ion-col>
+    </ion-row>
+
+  </ion-card>
 </ion-content>
