--- a/src/pages/my-events/my-events.html
+++ b/src/pages/my-events/my-events.html
@@ -1,12 +1,21 @@
 <ion-header>
 
   <ion-navbar>
-    <button ion-button [menuToggle]="activeMenu">
-      <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>
       My Events
     </ion-title>
+    <ion-buttons start>
+      <button ion-button icon-only menuToggle>
+        <ion-icon name="contact"></ion-icon>
+      </button>
+    </ion-buttons>
+
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon name="add" class="add"></ion-icon>
+      </button>
+    </ion-buttons>
+
   </ion-navbar>
 
 </ion-header>
