--- a/src/pages/user-list/user-list.html
+++ b/src/pages/user-list/user-list.html
@@ -14,4 +14,39 @@
 
 <ion-content padding>
 
+  <ion-item>
+    <ion-avatar item-start>
+      <img src="assets/imgs/avatar-ts-woody.png">
+    </ion-avatar>
+    <h2>Woody</h2>
+    <p>This town ain't big enough for the two of us!</p>
+    <ion-note item-end>3:43 pm</ion-note>
+  </ion-item>
+
+  <ion-item>
+    <ion-avatar item-start>
+      <img class="unavailable" src="assets/imgs/avatar-ts-buzz.png">
+    </ion-avatar>
+    <h2>Buzz Lightyear</h2>
+    <p>My eyeballs could have been sucked from their sockets!</p>
+    <ion-note item-end>1:12 pm</ion-note>
+  </ion-item>
+
+  <ion-item>
+    <ion-avatar item-start>
+      <img src="assets/imgs/avatar-ts-jessie.png">
+    </ion-avatar>
+    <h2>Jessie</h2>
+    <p>Well aren't you just the sweetest space toy I ever did meet!</p>
+    <ion-note item-end>10:03 am</ion-note>
+  </ion-item>
+
+  <ion-item>
+    <ion-avatar item-start>
+      <img src="assets/imgs/avatar-ts-potatohead.png">
+    </ion-avatar>
+    <h2>Mr. Potato Head</h2>
+    <p>You're not turning me into a Mashed Potato.</p>
+    <ion-note item-end>5:47 am</ion-note>
+  </ion-item>
 </ion-content>
