add userprofile, message tab

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="My Event" tabIcon="restaurant"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Explore" tabIcon="list"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="All Users" tabIcon="people"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="contact"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Messages" tabIcon="chatbubbles"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="All Users" tabIcon="people"></ion-tab>
 </ion-tabs>
