--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,6 +2,6 @@
   <ion-tab [root]="tab1Root" tabTitle="My Event" tabIcon="restaurant"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Explore" tabIcon="list"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="contact"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Messages" tabIcon="chatbubbles"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Notification" tabIcon="notifications-outline"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="All Users" tabIcon="people"></ion-tab>
 </ion-tabs>
