create a naive user profile page template

--- a/src/pages/user-list/user-list.html
+++ b/src/pages/user-list/user-list.html
@@ -14,7 +14,7 @@
 
 <ion-content padding>
 
-  <ion-item>
+  <ion-item (click)="jump()">
     <ion-avatar item-start>
       <img src="assets/imgs/avatar-ts-woody.png">
     </ion-avatar>
@@ -23,7 +23,7 @@
     <ion-note item-end>3:43 pm</ion-note>
   </ion-item>
 
-  <ion-item>
+  <ion-item (click)="jump()"> 
     <ion-avatar item-start>
       <img class="unavailable" src="assets/imgs/avatar-ts-buzz.png">
     </ion-avatar>
@@ -32,7 +32,7 @@
     <ion-note item-end>1:12 pm</ion-note>
   </ion-item>
 
-  <ion-item>
+  <ion-item (click)="jump()">
     <ion-avatar item-start>
       <img src="assets/imgs/avatar-ts-jessie.png">
     </ion-avatar>
@@ -41,7 +41,7 @@
     <ion-note item-end>10:03 am</ion-note>
   </ion-item>
 
-  <ion-item>
+  <ion-item (click)="jump()">
     <ion-avatar item-start>
       <img src="assets/imgs/avatar-ts-potatohead.png">
     </ion-avatar>
