add create event and view event page

--- a/src/pages/event-detail/event-detail.html
+++ b/src/pages/event-detail/event-detail.html
@@ -7,12 +7,37 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>EventDetail</ion-title>
+    <ion-title>Chinese Food</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-card>
+    <img src="assets/imgs/nin-live.png" />
+    <ion-card-content>
+      <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a
+        DeLorean?! Whoa. This is heavy.</p>
+    </ion-card-content>
+
+    <ion-item icon-end>
+      Restaurtant: Chipotle
+      <ion-icon name="navigate" item-right></ion-icon>
+    </ion-item>
+
+    <ion-item>
+      Time: 11/28/2018 5:30pm
+    </ion-item>
+
+
+    <ion-item>
+      <ion-label stack>Participants:</ion-label>
+      
+    </ion-item>
+
+  </ion-card>
+
+
 
 </ion-content>
