--- a/src/pages/my-events/my-events.html
+++ b/src/pages/my-events/my-events.html
@@ -22,5 +22,9 @@
 
 
 <ion-content padding>
-
+  <ion-fab bottom right edge class="addnew" (click) = createEvent()>
+    <button ion-fab mini side="top">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
 </ion-content>
