--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -14,5 +14,108 @@
 
 
 <ion-content padding>
+  <!-- <ion-item-group>
+    <ion-item>
+      <ion-label>Event Title</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Meeting Date&Time</ion-label>
+      <ion-datetime displayFormat="MM/DD/YYYY"></ion-datetime>
+    </ion-item>
+
+    <ion-item no-lines>
+      <ion-label>Event Description</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-textarea placeholder="Welcome, some interesting topics..."></ion-textarea>
+    </ion-item>
+  </ion-item-group>
+
+  <ion-item></ion-item>
+
+  <ion-item-group>
+    <ion-item no-lines>
+      <ion-label>Invite People here</ion-label>
+    </ion-item>
+    <ion-item no-lines>
+      <ion-label>Select a group</ion-label>
+      <ion-select>
+        <ion-option value="GroupId">MyGroup 1</ion-option>
+        <ion-option value="GroupId">MyGroup 2</ion-option>
+        <ion-option value="GroupId">MyGroup 3</ion-option>
+        <ion-option value="GroupId">MyGroup 4</ion-option>
+      </ion-select>
+    </ion-item>
+    <button ion-item>
+      TODO add choose user page, only show available users
+      Invite From User List
+    </button>
+  </ion-item-group>
+
+  <ion-item></ion-item>
+  <ion-item-group>
+    <button ion-item>
+      Select a Restaurant
+    </button>
+  </ion-item-group> -->
+
+
+
+
+
+
+  <div>
+    <form>
+      <section>
+        <ion-item>
+          <ion-input type="text" placeholder="Title: e.g. Chinese Food"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-textarea rows="3" placeholder="Write a description or something..."></ion-textarea>
+        </ion-item>
+        <button ion-item>
+          SELECT RESTAURANT
+        </button>
+        <button ion-item>
+          INVITE FRIENDS
+        </button>
+
+        <ion-item no-lines>Meeting Time</ion-item>
+        <ion-row no-padding class="multi-input-row">
+          <ion-col no-padding>
+            <ion-item class="multi-input time-item">
+              <ion-label stack>FROM</ion-label>
+              <ion-datetime displayFormat="MM/DD/YY" pickerFormat="MM-DD-YYYY"></ion-datetime>
+            </ion-item>
+          </ion-col>
+          <ion-col no-padding>
+            <ion-item class="multi-input time-item">
+              <ion-datetime displayFormat="h mm a" pickerFormat="h mm A"></ion-datetime>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row no-padding class="multi-input-row">
+          <ion-col no-padding>
+            <ion-item class="multi-input time-item">
+              <ion-label stack>TO</ion-label>
+              <ion-datetime displayFormat="MM/DD/YY" pickerFormat="MM-DD-YYYY"></ion-datetime>
+            </ion-item>
+          </ion-col>
+          <ion-col no-padding>
+            <ion-item class="multi-input time-item">
+              <ion-datetime displayFormat="h mm a" pickerFormat="h mm A"></ion-datetime>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </section>
+      <ion-item no-lines></ion-item>
+      <section class="form-section">
+        <button ion-button block type="submit">Post!</button>
+      </section>
+    </form>
+  </div>
 
 </ion-content>
