--- a/src/pages/restaurant-selection/restaurant-selection.html
+++ b/src/pages/restaurant-selection/restaurant-selection.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the MessagePage page.
+  Generated template for the RestaurantSelectionPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Notification</ion-title>
+    <ion-title>RestaurantSelection</ion-title>
   </ion-navbar>
 
 </ion-header>
