finish event detail page and create event page

--- a/src/pages/all-events/all-events.html
+++ b/src/pages/all-events/all-events.html
@@ -12,14 +12,16 @@
 <ion-content padding>
   <ion-card (click)="todetail()">
 
-    <img src="assets/imgs/nin-live.png" />
+    <img src="assets/imgs/chipotle.jpg" />
 
     <ion-card-content>
       <ion-card-title>
-        Nine Inch Nails Live
+        Mexican Food
+        <ion-badge>8</ion-badge>
       </ion-card-title>
       <p>
-        The most popular industrial group ever, and largely responsible for bringing the music to a mass audience.
+        Hola! we are newcomers from Sales department.
+        If you want to meet new friends and taste mexican food, join this group!!!👇🏻
       </p>
     </ion-card-content>
 
@@ -49,16 +51,17 @@
   <ion-card>
 
     <div>
-      <img src="assets/imgs/badu-live.png" />
+      <img src="assets/imgs/ramen.jpg" />
     </div>
 
     <ion-card-content>
       <ion-card-title>
-        Erykah Badu
+        Welcome!!!!
+        <ion-badge>3</ion-badge>
       </ion-card-title>
       <p>
-        American singer-songwriter, record producer, activist, and actress, Badu's style is a prime example of
-        neo-soul.
+        Ramen are very popular noodle dishes in Japan, and boiled noodles are basically served in different flavored
+        soup with many toppings. Come and taste it.
       </p>
     </ion-card-content>
 
@@ -89,16 +92,18 @@
   <ion-card>
 
     <div>
-      <img src="assets/imgs/queen-live.png" />
+      <img src="assets/imgs/salad.png" />
     </div>
 
     <ion-card-content>
       <ion-card-title>
-        Queen
+        Salad Group 🥗
+        <ion-badge>1</ion-badge>
       </ion-card-title>
       <p>
-        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the
-        world.
+        Eat salad, be healthy, we could also fit together.
+        Avocado Salad is my favorite, what about you guys?
+        Come and join me!
       </p>
     </ion-card-content>
 
