--- a/src/pages/event-detail/event-detail.html
+++ b/src/pages/event-detail/event-detail.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Chinese Food</ion-title>
+    <ion-title>Mexican Food</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,26 +15,65 @@
 
 <ion-content padding>
   <ion-card>
-    <img src="assets/imgs/nin-live.png" />
+    <img src="assets/imgs/chipotle.jpg" />
     <ion-card-content>
-      <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a
-        DeLorean?! Whoa. This is heavy.</p>
+      <p>
+        Hola! we are newcomers from Sales department.
+        If you want to meet new friends and taste mexican food, join this group!!!👇🏻
+      </p>
     </ion-card-content>
 
     <ion-item icon-end>
-      Restaurtant: Chipotle
-      <ion-icon name="navigate" item-right></ion-icon>
+      <ion-label>Restaurtant:</ion-label>
+      <div item-content>Chipotle</div> 
+      <ion-icon name="arrow-dropright" item-right></ion-icon>
     </ion-item>
 
     <ion-item>
-      Time: 11/28/2018 5:30pm
+      <ion-label>
+        Time:
+      </ion-label>
+      <div item-content>
+        11/28/2018 5:30pm
+      </div>
     </ion-item>
 
 
     <ion-item>
       <ion-label stack>Participants:</ion-label>
-      
     </ion-item>
+    <ion-item class="host">
+      <ion-avatar item-start>
+        <img src="assets/imgs/avatar-ts-woody.png">
+      </ion-avatar>
+      <h2>Woody<span>(host)</span></h2>
+      <p>This town ain't big enough for the two of us!</p>
+    </ion-item>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img class="unavailable" src="assets/imgs/avatar-ts-buzz.png">
+      </ion-avatar>
+      <h2>Buzz Lightyear</h2>
+      <p>My eyeballs could have been sucked from their sockets!</p>
+    </ion-item>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/avatar-ts-jessie.png">
+      </ion-avatar>
+      <h2>Jessie</h2>
+      <p>Well aren't you just the sweetest space toy I ever did meet!</p>
+    </ion-item>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/avatar-ts-potatohead.png">
+      </ion-avatar>
+      <h2>Mr. Potato Head</h2>
+      <p>You're not turning me into a Mashed Potato.</p>
+    </ion-item>
+
 
   </ion-card>
 
