some changes in explore page

--- a/src/pages/all-events/all-events.html
+++ b/src/pages/all-events/all-events.html
@@ -10,7 +10,18 @@
 
 
 <ion-content padding>
+
+  <ion-list-header no-lines class="list_header"> November 26, 2018 </ion-list-header>
+
   <ion-card (click)="todetail()">
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/avatar-ts-woody.png">
+      </ion-avatar>
+      <h2>Marty McFly</h2>
+      <p>November 26, 2018</p>
+    </ion-item>
 
     <img src="assets/imgs/chipotle.jpg" />
 
@@ -50,6 +61,14 @@
 
   <ion-card>
 
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/sarah-avatar.png.jpeg">
+      </ion-avatar>
+      <h2>Sarah Connor</h2>
+      <p>November 26, 2018</p>
+    </ion-item>
+
     <div>
       <img src="assets/imgs/ramen.jpg" />
     </div>
@@ -88,8 +107,17 @@
 
   </ion-card>
 
+  <ion-list-header no-lines class="list_header"> November 24, 2018 </ion-list-header>
 
   <ion-card>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/ian-avatar.png">
+      </ion-avatar>
+      <h2>Dr. Ian Malcolm</h2>
+      <p>November 24, 2018</p>
+    </ion-item>
 
     <div>
       <img src="assets/imgs/salad.png" />
