--- a/src/pages/event-detail/event-detail.html
+++ b/src/pages/event-detail/event-detail.html
@@ -16,7 +16,9 @@
 <ion-content padding>
   <ion-card>
     <img src="assets/imgs/chipotle.jpg" />
+
     <ion-card-content>
+      <ion-card-title>Mexican Food</ion-card-title>
       <p>
         Hola! we are newcomers from Sales department.
         If you want to meet new friends and taste mexican food, join this group!!!👇🏻
@@ -25,7 +27,7 @@
 
     <ion-item icon-end>
       <ion-label>Restaurtant:</ion-label>
-      <div item-content>Chipotle</div> 
+      <div item-content>Chipotle</div>
       <ion-icon name="arrow-dropright" item-right></ion-icon>
     </ion-item>
 
@@ -38,9 +40,8 @@
       </div>
     </ion-item>
 
-
     <ion-item>
-      <ion-label stack>Participants:</ion-label>
+      <ion-label stack>Host:</ion-label>
     </ion-item>
     <ion-item class="host">
       <ion-avatar item-start>
@@ -48,6 +49,10 @@
       </ion-avatar>
       <h2>Woody<span>(host)</span></h2>
       <p>This town ain't big enough for the two of us!</p>
+    </ion-item>
+
+    <ion-item>
+      <ion-label stack>Participants:</ion-label>
     </ion-item>
 
     <ion-item>
