revise a typo in my-event page

--- a/src/pages/my-events/my-events.html
+++ b/src/pages/my-events/my-events.html
@@ -140,7 +140,7 @@
       <ion-item>
 
         <h2 class="event_title">Pizza at Pizza House</h2>
-        <ion-note>11h ago</ion-note>
+        <p>11h ago</p>
         <p>16:30, 1456 Main Street, Ann Arbor</p>
 
       </ion-item>
