added some CSS; created userdata model

--- a/src/pages/user-list/user-list.html
+++ b/src/pages/user-list/user-list.html
@@ -8,42 +8,35 @@
 
 </ion-header>
 
-
 <ion-content padding>
+  <ion-item-group *ngFor="let user of users"> 
+    <ion-item no-padding (click)="jump()">
+      <ion-avatar item-start>
+        <img src={{user.img}}>
+      </ion-avatar>
+      <h2>{{user.name}}</h2>
+      <p>{{user.company}}</p>
+      <ion-note item-end>3:43 pm</ion-note>
+    </ion-item>
+  </ion-item-group>
 
-  <ion-item (click)="jump()">
-    <ion-avatar item-start>
-      <img src="assets/imgs/avatar-ts-woody.png">
-    </ion-avatar>
-    <h2>Woody</h2>
-    <p>This town ain't big enough for the two of us!</p>
-    <ion-note item-end>3:43 pm</ion-note>
-  </ion-item>
+  <ion-item no-padding (click)="jump()">
+    <ion-thumbnail item-start>
+      <div class="conversation-summary-avatar conversation-summary-avatar-group" data-number-of-thumbnails="4">
+        <div class="conversation-summary-avatar-group-member-wrapper"><img src="assets/imgs/avatar-ts-woody.png" data-user-initial="J"></div>
 
-  <ion-item (click)="jump()"> 
-    <ion-avatar item-start>
-      <img class="unavailable" src="assets/imgs/avatar-ts-buzz.png">
-    </ion-avatar>
-    <h2>Buzz Lightyear</h2>
-    <p>My eyeballs could have been sucked from their sockets!</p>
-    <ion-note item-end>1:12 pm</ion-note>
-  </ion-item>
+        <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="assets/imgs/avatar-ts-buzz.png" data-user-initial="P"></div>
 
-  <ion-item (click)="jump()">
-    <ion-avatar item-start>
-      <img src="assets/imgs/avatar-ts-jessie.png">
-    </ion-avatar>
-    <h2>Jessie</h2>
-    <p>Well aren't you just the sweetest space toy I ever did meet!</p>
-    <ion-note item-end>10:03 am</ion-note>
-  </ion-item>
-
-  <ion-item (click)="jump()">
-    <ion-avatar item-start>
-      <img src="assets/imgs/avatar-ts-potatohead.png">
-    </ion-avatar>
-    <h2>Mr. Potato Head</h2>
+        <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="assets/imgs/avatar-ts-jessie.png" data-user-initial="B"></div>
+        
+        <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-1/c0.0.160.160/p160x160/11351261_10150581634174980_8970167313412859905_n.jpg?oh=d3379a24a42f4f697638bc012f987bbc&oe=581A1AA3"
+            data-user-initial="B"></div>
+      </div>
+    </ion-thumbnail>
+    <h2>Buzz Lightyear，Jessie， Mr. Potato Head</h2>
     <p>You're not turning me into a Mashed Potato.</p>
     <ion-note item-end>5:47 am</ion-note>
   </ion-item>
+
+
 </ion-content>
