--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -28,7 +28,7 @@
         </ion-row>
         <ion-row class="profile-action-row">
           <ion-col no-padding>
-			<ion-item>
+			<ion-item no-lines>
 			  <ion-label>Available</ion-label>
 			  <ion-toggle checked="false"></ion-toggle>
 			</ion-item>
