--- a/src/pages/all-events/all-events.html
+++ b/src/pages/all-events/all-events.html
@@ -22,6 +22,55 @@
       <p>November 27, 2018</p>
     </ion-item>
 
+    <img src="assets/imgs/chipotle.jpg" />
+
+    <ion-card-content>
+      <ion-card-title>
+        Mexican Food
+        <ion-badge>8</ion-badge>
+      </ion-card-title>
+      <p>
+        Hola! we are newcomers from Sales department.
+        If you want to meet new friends and taste mexican food, join this group!!!👇🏻
+      </p>
+    </ion-card-content>
+
+    <ion-row no-padding>
+      <ion-col>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='happy'></ion-icon>
+          Join
+        </button>
+      </ion-col>
+      <ion-col text-center>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='star-outline'></ion-icon>
+          Bookmark
+        </button>
+      </ion-col>
+      <ion-col text-right>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='share-alt'></ion-icon>
+          Share
+        </button>
+      </ion-col>
+    </ion-row>
+
+  </ion-card>
+
+
+  <ion-list-header no-lines class="list_header"> November 26, 2018 </ion-list-header>
+
+  <ion-card>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/avatar-ts-woody.png">
+      </ion-avatar>
+      <h2>Marty McFly</h2>
+      <p>November 26, 2018</p>
+    </ion-item>
+
     <img src="assets/imgs/pizzahouse.jpg" />
 
     <ion-card-content>
@@ -58,53 +107,6 @@
   </ion-card>
 
 
-  <ion-list-header no-lines class="list_header"> November 26, 2018 </ion-list-header>
-
-  <ion-card (click)="todetail()">
-
-    <ion-item>
-      <ion-avatar item-start>
-        <img src="assets/imgs/avatar-ts-woody.png">
-      </ion-avatar>
-      <h2>Marty McFly</h2>
-      <p>November 26, 2018</p>
-    </ion-item>
-
-    <img src="assets/imgs/chipotle.jpg" />
-
-    <ion-card-content>
-      <ion-card-title>
-        Mexican Food
-        <ion-badge>8</ion-badge>
-      </ion-card-title>
-      <p>
-        Hola! we are newcomers from Sales department.
-        If you want to meet new friends and taste mexican food, join this group!!!👇🏻
-      </p>
-    </ion-card-content>
-
-    <ion-row no-padding>
-      <ion-col>
-        <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='happy'></ion-icon>
-          Join
-        </button>
-      </ion-col>
-      <ion-col text-center>
-        <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='star-outline'></ion-icon>
-          Bookmark
-        </button>
-      </ion-col>
-      <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
-        </button>
-      </ion-col>
-    </ion-row>
-
-  </ion-card>
 
   <ion-card>
 
