--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -67,48 +67,46 @@
 
 
   <ion-card>
-    <form>
 
-      <ion-item>
-        <ion-input type="text" placeholder="Title: e.g. Chinese Food"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-input type="text" placeholder="Title: e.g. Chinese Food"></ion-input>
+    </ion-item>
 
-      <button color="light" ion-button block large class="upload-image-button">
-        <ion-icon name="camera"></ion-icon>
-        <h3 class="button-title">select an image or use default image</h3>
-      </button>
+    <button color="light" ion-button block large class="upload-image-button">
+      <ion-icon name="camera"></ion-icon>
+      <h3 class="button-title">select an image or use default image</h3>
+    </button>
 
-      <ion-item>
-        <ion-textarea rows="3" placeholder="Write a description or something..."></ion-textarea>
-      </ion-item>
-      <button ion-item>
-        Select Restaurant
-      </button>
-      <button ion-item>
-        Invite Friends
-        <ion-badge item-end>0</ion-badge>
-      </button>
+    <ion-item>
+      <ion-textarea rows="3" placeholder="Write a description or something..."></ion-textarea>
+    </ion-item>
+    <button ion-item>
+      Select Restaurant
+    </button>
+    <button ion-item>
+      Invite Friends
+      <ion-badge item-end>0</ion-badge>
+    </button>
 
-      <ion-item>
-        <ion-label>Meeting date:</ion-label>
-        <ion-datetime placeholder="01/01/2018" displayFormat="MM/DD/YY" pickerFormat="MM-DD-YYYY"></ion-datetime>
-      </ion-item>
+    <ion-item>
+      <ion-label>Meeting date:</ion-label>
+      <ion-datetime [(ngModel)]="event.meet_date" placeholder="2018-01-01" displayFormat="MM/DD/YY" pickerFormat="MM-DD-YYYY"></ion-datetime>
+    </ion-item>
 
-      <ion-item>Meeting hour:</ion-item>
+    <ion-item>Meeting hour:</ion-item>
 
-      <ion-item class="time-select">
-        <ion-label>FROM</ion-label>
-        <ion-datetime placeholder="6 00 pm" displayFormat="h mm a" pickerFormat="h mm A"></ion-datetime>
-      </ion-item>
+    <ion-item class="time-select">
+      <ion-label>FROM</ion-label>
+      <ion-datetime [(ngModel)]="event.start_time" placeholder="6 00 pm" displayFormat="h mm a" pickerFormat="h mm A"></ion-datetime>
+    </ion-item>
 
-      <ion-item class="time-select">
-        <ion-label>TO</ion-label>
-        <ion-datetime placeholder="9 00 pm" displayFormat="h mm a" pickerFormat="h mm A"></ion-datetime>
-      </ion-item>
+    <ion-item class="time-select">
+      <ion-label>TO</ion-label>
+      <ion-datetime [(ngModel)]="event.end_time" placeholder="9 00 pm" displayFormat="h mm a" pickerFormat="h mm A"></ion-datetime>
+    </ion-item>
 
-      <button ion-button block class="form-action-button" type="submit">Post!</button>
+    <button ion-button block class="form-action-button" (click)="addEvent()">Post!</button>
 
-    </form>
   </ion-card>
 
 </ion-content>
