--- a/src/pages/event-detail/event-detail.html
+++ b/src/pages/event-detail/event-detail.html
@@ -25,12 +25,6 @@
       </p>
     </ion-card-content>
 
-    <ion-item icon-end>
-      <ion-label>Restaurtant:</ion-label>
-      <div item-content>Chipotle</div>
-      <ion-icon name="arrow-dropright" item-right></ion-icon>
-    </ion-item>
-
     <ion-item>
       <ion-label>
         Time:
@@ -40,14 +34,25 @@
       </div>
     </ion-item>
 
+
+    <ion-item>Restaurtant:</ion-item>
+    <ion-item icon-end (click)="redirect(res.url)">
+      <ion-icon name="wine" item-start large></ion-icon>
+      <h2>{{ res.name }}</h2>
+      <p>{{ res.location }}</p>
+      <ion-icon name="arrow-dropright" item-right></ion-icon>
+    </ion-item>
+
+
+
     <ion-item>
       <ion-label stack>Host:</ion-label>
     </ion-item>
-    <ion-item class="host">
+    <ion-item>
       <ion-avatar item-start>
         <img src="assets/imgs/avatar-ts-woody.png">
       </ion-avatar>
-      <h2>Woody<span>(host)</span></h2>
+      <h2>Woody</h2>
       <p>This town ain't big enough for the two of us!</p>
     </ion-item>
 
