--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -26,7 +26,7 @@
     </button>
 
     <ion-item>
-      <ion-textarea rows="3" placeholder="Write a description or something..."></ion-textarea>
+      <ion-textarea [(ngModel)]="event.description" rows="3" placeholder="Write a description or something..."></ion-textarea>
     </ion-item>
     <button ion-item>
       Select Restaurant
