--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -31,7 +31,7 @@
   <div class="user-details">
     <ion-row class="user-main-data-row">
       <ion-col>
-  		<ion-img class="user-image" width="120" height="120" src="{{user.img}}"> </ion-img>
+  		<ion-img class="user-image" width="120" height="120" src={{user.img}}> </ion-img>
       </ion-col>
       <ion-col no-padding>
         <ion-row class="social-presence-row">
