--- a/src/pages/my-events/my-events.html
+++ b/src/pages/my-events/my-events.html
@@ -30,61 +30,10 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ion-list>
-    <ion-item>
 
 
-      <ion-list-header no-lines class="list_header"> Tomorrow, Tus, Nov 26 </ion-list-header>
-
-      <ion-item no-lines>
-
-        <h2 class="event_title">Pizza at Pizza House, Join Me!</h2>
-        <p>11h ago</p>
-        <p>16:30, 1456 Main Street, Ann Arbor</p>
-
-      </ion-item>
-
-
-      <ion-item no-lines>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-jessie.png" class="participant_img">
-        </ion-avatar>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-woody.png" class="participant_img">
-        </ion-avatar>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-potatohead.png" class="participant_img">
-        </ion-avatar>
-
-        <p style="display: inline-block; padding-top: 20px">+5</p>
-
-
-        <button ion-button icon-end clear small style=" margin-top: 0; padding-bottom: 12px; padding-left: 60px;">
-          <ion-icon name="star-outline"></ion-icon>
-          <div>STAR</div>
-        </button>
-
-        <button ion-button icon-end clear small style=" margin-top: 0; padding-bottom: 12px">
-          <ion-icon name="ice-cream-outline"></ion-icon>
-          <div>JOIN</div>
-        </button>
-
-      </ion-item>
-
-
-
-
-
-
-
-
-    </ion-item>
-
-
-
+  <ion-list *ngFor="let eventDate of dates">
+      <ion-list-header no-lines class="list_header"> {{eventDate | date: 'fullDate'}} </ion-list-header>
     <ion-item>
 
       <ion-item no-lines>
@@ -126,173 +75,15 @@
       </ion-item>
 
 
-
-
-
-
     </ion-item>
 
 
-
-
-    <ion-item no-lines>
-
-      <ion-item>
-
-        <h2 class="event_title">Pizza at Pizza House</h2>
-        <p>11h ago</p>
-        <p>16:30, 1456 Main Street, Ann Arbor</p>
-
-      </ion-item>
-
-
-      <ion-item no-lines>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-jessie.png" class="participant_img">
-        </ion-avatar>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-woody.png" class="participant_img">
-        </ion-avatar>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-potatohead.png" class="participant_img">
-        </ion-avatar>
-
-        <p style="display: inline-block; padding-top: 20px">+5</p>
-
-
-        <button ion-button icon-end clear small style=" margin-top: 0; padding-bottom: 12px; padding-left: 60px;">
-          <ion-icon name="star-outline"></ion-icon>
-          <div>STAR</div>
-        </button>
-
-        <button ion-button icon-end clear small style=" margin-top: 0; padding-bottom: 12px">
-          <ion-icon name="ice-cream-outline"></ion-icon>
-          <div>JOIN</div>
-        </button>
-
-      </ion-item>
-
-
-
-
-
-    </ion-item>
-
-  </ion-list>
-
-
-  <!-- ********************************************************************************************************************* -->
-  <ion-list>
-
-    <ion-item no-lines>
-
-
-      <ion-list-header no-lines class="list_header"> Tomorrow, Tus, Nov 26 </ion-list-header>
-
-      <ion-item no-lines>
-
-        <h2 class="event_title">Pizza at Pizza House, Join Me!</h2>
-        <p>11h ago</p>
-        <p>16:30, 1456 Main Street, Ann Arbor</p>
-
-      </ion-item>
-
-
-      <ion-item no-lines>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-jessie.png" class="participant_img">
-        </ion-avatar>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-woody.png" class="participant_img">
-        </ion-avatar>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-potatohead.png" class="participant_img">
-        </ion-avatar>
-
-        <p style="display: inline-block; padding-top: 20px">+5</p>
-
-
-        <button ion-button icon-end clear small style=" margin-top: 0; padding-bottom: 12px; padding-left: 60px;">
-          <ion-icon name="star-outline"></ion-icon>
-          <div style="padding-left: 5px;">STAR</div>
-        </button>
-
-        <button ion-button icon-end clear small style=" margin-top: 0; padding-bottom: 12px">
-          <ion-icon name="ice-cream-outline"></ion-icon>
-          <div style="padding-left: 5px;">JOIN</div>
-        </button>
-
-      </ion-item>
-
-
-
-
-
-
-    </ion-item>
 
   </ion-list>
 
 
 
-  <!-- ********************************************************************************************************************* -->
-  <ion-list>
 
-    <ion-item no-lines>
-
-
-      <ion-list-header no-lines class="list_header"> Tomorrow, Tus, Nov 26 </ion-list-header>
-
-      <ion-item no-lines>
-
-        <h2 class="event_title">Pizza at Pizza House, Join Me!</h2>
-        <p>11h ago</p>
-        <p>16:30, 1456 Main Street, Ann Arbor</p>
-
-      </ion-item>
-
-
-      <ion-item no-lines>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-jessie.png" class="participant_img">
-        </ion-avatar>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-woody.png" class="participant_img">
-        </ion-avatar>
-
-        <ion-avatar item-start>
-          <img src="assets/imgs/avatar-ts-potatohead.png" class="participant_img">
-        </ion-avatar>
-
-        <p style="display: inline-block; padding-top: 20px">+5</p>
-
-
-        <button ion-button icon-end clear small style=" margin-top: 0; padding-bottom: 12px; padding-left: 60px;">
-          <ion-icon name="star-outline"></ion-icon>
-          <div>STAR</div>
-        </button>
-
-        <button ion-button icon-end clear small style=" margin-top: 0; padding-bottom: 12px">
-          <ion-icon name="ice-cream-outline"></ion-icon>
-          <div>JOIN</div>
-        </button>
-      </ion-item>
-
-
-
-
-
-    </ion-item>
-
-  </ion-list>
   <!-- ********************************************************************************************************************* -->
 
   <ion-fab bottom right edge class="addnew" (click)=createEvent()>
