--- a/src/pages/user-list/user-list.html
+++ b/src/pages/user-list/user-list.html
@@ -88,8 +88,13 @@
         </ion-item>
       </ion-item-group>
     </ng-container>
-
   </div>
+
+  <ion-fab bottom left edge class="addnew" (click)=createGroup()>
+    <button ion-fab mini side="top">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
 
 
   
