--- a/src/pages/restaurant-selection/restaurant-selection.html
+++ b/src/pages/restaurant-selection/restaurant-selection.html
@@ -19,19 +19,17 @@
     <ion-card *ngFor="let res of restaurants">
       <ion-item>
         <ion-label>{{ res.name }}</ion-label>
-        <ion-checkbox item-end color="danger" checked="false"></ion-checkbox>
+        <ion-checkbox item-start color="danger" checked="false"></ion-checkbox>
 
       </ion-item>
-
-      <img data-src="{{res.image_url}}">
-
-      <ion-item>
-        <h2>Category: {{ res.categories }}</h2>
-        <p>{{ res.location }}</p>
-        <ion-icon name="arrow-dropright" item-right (click)="redirect()"></ion-icon>
-      </ion-item>
-
-
+      <ion-card-content>
+        <img data-src="{{res.image_url}}" class="restaurant-preview-img">
+        <div class="description">
+          <h2>Category: {{ res.categories }}</h2>
+          <p>{{ res.location }}</p>
+          <ion-icon name="arrow-dropright" class="next-button" item-right (click)="redirect(res.url)"></ion-icon>
+        </div>
+      </ion-card-content>
     </ion-card>
   </div>
 
