--- a/src/pages/user-list/user-list.html
+++ b/src/pages/user-list/user-list.html
@@ -41,13 +41,13 @@
 
               <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src={{users[group.userIds[1]].img}} data-user-initial="P"></div>
 
-              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-1/c0.0.160.160/p160x160/11351261_10150581634174980_8970167313412859905_n.jpg?oh=d3379a24a42f4f697638bc012f987bbc&oe=581A1AA3" data-user-initial="B"></div>
+              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="" data-user-initial="B"></div>
               
-              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-1/c0.0.160.160/p160x160/11351261_10150581634174980_8970167313412859905_n.jpg?oh=d3379a24a42f4f697638bc012f987bbc&oe=581A1AA3"
+              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src=""
                   data-user-initial="B"></div>
             </div>
           </ion-thumbnail>
-          <h2>Buzz Lightyear，Jessie， Mr. Potato Head</h2>
+          <h2>{{users[group.userIds[0]].name}}, {{users[group.userIds[1]].name}}</h2>
           <p>You're not turning me into a Mashed Potato.</p>
           <ion-note item-end>5:47 am</ion-note>
         </ion-item>
@@ -76,13 +76,13 @@
 
               <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src={{users[group.userIds[1]].img}} data-user-initial="P"></div>
 
-              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-1/c0.0.160.160/p160x160/11351261_10150581634174980_8970167313412859905_n.jpg?oh=d3379a24a42f4f697638bc012f987bbc&oe=581A1AA3" data-user-initial="B"></div>
+              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="" data-user-initial="B"></div>
               
-              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-1/c0.0.160.160/p160x160/11351261_10150581634174980_8970167313412859905_n.jpg?oh=d3379a24a42f4f697638bc012f987bbc&oe=581A1AA3"
+              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src=""
                   data-user-initial="B"></div>
             </div>
           </ion-thumbnail>
-          <h2>Buzz Lightyear，Jessie， Mr. Potato Head</h2>
+          <h2>{{users[group.userIds[0]].name}}, {{users[group.userIds[1]].name}}</h2>
           <p>You're not turning me into a Mashed Potato.</p>
           <ion-note item-end>5:47 am</ion-note>
         </ion-item>
